[metadata]
name = kokudo_suuchi
version = attr: src.__version__
author = Masayoshi Mita
author_email = nigimitama16@gmail.com
license = MIT
description = Make The Kokudo Suuchi Joho API Easy to Use.

[options]
install_requires = 
    requests
    lxml
    xmljson
    xlrd
    pandas
    geopandas