[metadata]
name = kokudo_suuchi_jouhou
version = attr: src.__version__
author = Masayoshi Mita
author_email = nigimitama16@gmail.com
url = https://github.com/nigimitama/ksj
license = MIT
description = This library will make The Kokudo Suuchi Jouhou API easy to use.
long_description = file: README.md

[options]
install_requires = 
    requests
    lxml
    xmljson
    xlrd
    pandas
    geopandas