[metadata]
name = ksj
version = attr: ksj.__version__
author = Masayoshi Mita
author_email = nigimitama16@gmail.com
url = https://github.com/nigimitama/ksj
license = MIT
description = This library will make the Kokudo Suuchi Jouhou API easy to use.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires = 
    lxml>=4.4.0
    xmljson>=0.2.0
    xlrd>=1.2.0
    geopandas>=0.6.0